--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,10 @@ projects:
   exclude:
     forks: true
     projects:
-    # - repo-name
+        generik
+        featherlite
+        featherlite-controls
+        components-page-builder
 
 # social_media:
   # behance: your_username
